fix: sidebar can be hidden by touch

--- a/whenthen-web/src/components/SideBarComponent/MobileDefault.module.scss
+++ b/whenthen-web/src/components/SideBarComponent/MobileDefault.module.scss
@@ -15,6 +15,7 @@
 
 .sideBarOutside {
   display: block;
+  background-color: rgba(0, 0, 0, 0.3);
   position: fixed;
   top: 0;
   left: 0;
